--- a/magicmethods.html
+++ b/magicmethods.html
@@ -12,7 +12,7 @@
 <h1>A Guide to Python's Magic Methods</h1>
 <h3>Rafe Kettler</h3>
 <p>Copyright &copy; 2011 Rafe Kettler</p>
-<p>Version 0.11</p>
+<p>Version 0.12</p>
 <p><b><a name="contents">Table of Contents</a></p></b>
 <dl>
 <dt><a href="#intro">Introduction</a></dt>
@@ -297,7 +297,24 @@ def __setattr__(self, name, value):
 <p>Now that we're talking about creating your own sequences in Python, it's time to talk about <em>protocols</em>. Protocols are somewhat similar to interfaces in other languages in that they give you a set of methods you must define. However, in Python protocols are totally informal and require no explicit declarations to implement. Rather, they're more like guidelines.</p>
 <p>Why are we talking about protocols now? Because implmenting custom container types in Python involves using some of these protocols. First, there's the protocol for defining immutable containers: to make an immutable container, you need only define <code>__len__</code> and <code>__getitem__</code> (more on these later). The mutable container protocol requires everything that immutable containers require plus <code>__setitem__</code> and <code>__delitem__</code>. Lastly, if you want your object to be iterable, you'll have to define <code>__iter__</code>, which returns an iterator. That iterator must conform to an iterator protocol, which requires iterators to have methods called <code>__iter__</code>(returning itself) and <code>next</code>.</p>
 <h4>The magic behind containers</h4>
-<p>Without any more wait, here are the magic methods that containers use:</p> 
+<p>Without any more wait, here are the magic methods that containers use:</p>
+<dl>
+<dt><code>__len__(self)</code></dt>
+    <dd>Returns the length of the container. Part of the protocol for both immutable and mutable containers.</dd>
+<dt><code>__getitem__(self, key)</code></dt>
+    <dd>Defines behavior for when an item is accessed, using the notation <code>self[key]</code>. This is also part of both the mutable and immutable container protocol. It should also raise appropriate exceptions: <code>TypeError</code> if the type of the key is wrong and <code>KeyError</code> if there is no corresponding value for the key.</dd>
+<dt><code>__setitem__(self, key, value)</code></dt>
+    <dd>Defines behavior for when an item is assigned to, using the notation <code>self[key] = value</code>. This is par of the mutable container protocol. Again, you should raise <code>KeyError</code> and <code>TypeError</code> where appropriate.</dd>
+<dt><code>__delitem__(self, key)</code></dt>
+    <dd>Defines behavior for when an item is deleted (e.g. <code>del self[key]</code>). This is only part of the mutable container protocol. You must raise the appropriate exceptions when an invalid key is used.</dd>
+<dt><code>__iter__(self)</code></dt>
+    <dd>Should return an iterator for the container. Iterators are returned in a number of contexts, most notably by the <code>iter()</code> builtin function and when a container is looped over using the form <code>for x in container:</code>. Iterators are their own objects, and they also must define an <code>__iter__</code> method that returns <code>self</code>.</dd>
+<dt><code>__reversed__(self)</code></dt>
+    <dd>Called to implement behavior for the <code>reversed()</code> builtin function. Should return a reversed version of the list.</dd>
+<dt><code>__contains__(self, item)</code></dt>
+    <dd>Last but not least, <code>__contains__</code> defines behavior for membership tests using <code>in</code> and <code>not in</code>. Why isn't this part of a sequence protocol, you ask? Because when <code>__contains__</code> isn't defined, Python just iterates over the sequence and returns <code>True</code> if it comes across the item it's looking for.</dd>
+</dl>
+<h4>An example</h4>
 </body>
 </html>
 
