--- a/magicmethods.html
+++ b/magicmethods.html
@@ -13,6 +13,7 @@
 <h3>Rafe Kettler</h3>
 <p>Copyright &copy; 2011 Rafe Kettler</p>
 <p>Version 0.12</p>
+<p>The magic methods guide has a git repository at <a href="http://www.github.com/RafeKettler/magicmethods">http://www.github.com/RafeKettler/magicmethods</a>. Any issues can be reported there, along with comments, (or even contributions!).</p>
 <p><b><a name="contents">Table of Contents</a></p></b>
 <dl>
 <dt><a href="#intro">Introduction</a></dt>
